--- a/Uygulama1/HTML/BOOSTAP.HTML
+++ b/Uygulama1/HTML/BOOSTAP.HTML
@@ -99,7 +99,7 @@
 </div>
 <div class="containe">
     <hr class="featurette-divider" style="color: blue; size: 40px;">
-<div class="row">
+<!-- <div class="row">
     <div class="col-sm-3 mb-3 mb-sm-0">
       <div class="card">
         <img src="/Uygulama1/img/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzL2EyNjNmMjE2LWE5ZDEtNGI4Mi05ZjM1LTIzMWQxOWY2YTZiNC5qcGc=" class="card-img-top img-fluid" alt="...">
@@ -109,8 +109,8 @@
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
-    </div>
-    <div class="col-sm-3 mb-3 mb-sm-0">
+    </div> -->
+    <!-- <div class="col-sm-3 mb-3 mb-sm-0">
       <div class="card">
         <img src="/Uygulama1/img/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzL2EyNjNmMjE2LWE5ZDEtNGI4Mi05ZjM1LTIzMWQxOWY2YTZiNC5qcGc=" class="card-img-top img-fluid" alt="...">
         <div class="card-body">
@@ -141,7 +141,13 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+<div class="row" id="card-container">
+  <!--
+  data json aldığım kartlarım buraya gelicek burada oluşturucam        
+  -->
+      </div>
+  
 <footer class="bg-dark text-white text-center py-3">
     <div class="container">
         <p class="mb-0">© 2024 Tüm Hakları Saklıdır. Minel Company</p>
@@ -149,5 +155,6 @@
 </footer>
 
   </div>
+  <script src="/Boostrap/Html/script.js"></script> 
 </body>
 </html>
